added one time script to print only the dota interfaces from the api

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Dota output files to ignore
 all_steam_interfaces.json
-
+all_dota2_interfaces.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
