--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ live_part2.json
 temp_matchDetails.json
 temp_matchDetails_true.json
 heroes.json
+live_games.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
