updated readme and req, started using constants

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ display heroes name from other output file
 create python on loop that checks every 30 minutes for the live games
 	if a 'followed' player is found, send email
 	followed player ids and email should be read from config file
+remove extra stuff from heroes json I don't need 
