--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pretty print live games
+add more info to live games (player name?)
 display only full games (people leave if game is over)
-display heroes name from other output file
 create python on loop that checks every 30 minutes for the live games
 	if a 'followed' player is found, send email
 	followed player ids and email should be read from config file
 remove extra stuff from heroes json I don't need 
+change index of heroes from string to int
